cabal-version:      2.4
name:               NbE
version:            0.0.1.0

-- A short (one-line) description of the package.
synopsis: An NbE Learning Experience

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             aradarbel10
maintainer:         aradarbel10@gmail.com

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files:
    readme.md

executable NbE
    extensions:     Strict
    main-is:        Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:  Common.Name, Common.Env, Common.Utils,
                    Surface

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , mtl
                    , parsec
                    , transformers
    hs-source-dirs:   src
    default-language: Haskell2010
